[gd_scene load_steps=66 format=2]

[ext_resource path="res://Assets/franken2.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/2d/characters/frankenspoopy/Sprite-Sheet-Stir.png" type="Texture" id=3]
[ext_resource path="res://src/Resources/Indicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/PCInteractionArea.gd" type="Script" id=5]
[ext_resource path="res://Assets/2d/characters/frankenspoopy/FrankensteinColored.png" type="Texture" id=6]
[ext_resource path="res://Assets/2d/characters/frankenspoopy/Frankenstein2.png" type="Texture" id=7]
[ext_resource path="res://Assets/2d/characters/frankenspoopy/Sprite-Sheet-Grabbing.png" type="Texture" id=8]
[ext_resource path="res://Assets/2d/characters/frankenspoopy/Watering.png" type="Texture" id=9]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "cook" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite3D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=23]
resource_name = "cook"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "cook" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite3D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "cookold"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite3D2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=35]
resource_name = "none"

[sub_resource type="Animation" id=3]
resource_name = "still"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape" id=4]
radius = 2.0
height = 2.0

[sub_resource type="AtlasTexture" id=34]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=29]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=30]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 140, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=31]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 280, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=32]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 420, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=33]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 560, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=36]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=37]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 140, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=38]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 280, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=39]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 420, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=40]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 560, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=41]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 700, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=42]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 840, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=43]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 980, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=44]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1120, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=45]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1260, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=46]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1400, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=47]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1540, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=48]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1680, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=49]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1820, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=50]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 1960, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=51]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 2100, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=52]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 2240, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=53]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 2380, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=54]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 2520, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=55]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 2660, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=56]
flags = 23
atlas = ExtResource( 9 )
region = Rect2( 2800, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=12]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=13]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 140, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=14]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 280, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=15]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 420, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=16]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 560, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=17]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 700, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=18]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 840, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=19]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 980, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=20]
flags = 23
atlas = ExtResource( 7 )
region = Rect2( 1120, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=5]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 140, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=6]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=7]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 280, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=8]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 420, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=9]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 560, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=10]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 700, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=11]
flags = 23
atlas = ExtResource( 6 )
region = Rect2( 840, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=24]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 1820, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=25]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 1960, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=26]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 2100, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=27]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 2240, 0, 140, 250 )

[sub_resource type="AtlasTexture" id=28]
flags = 23
atlas = ExtResource( 8 )
region = Rect2( 2380, 0, 140, 250 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "grab",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "water",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "smash",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "cook",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "letgo",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
visible = false
cast_shadow = 2
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D2" type="Sprite3D" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 22 )
anims/cook = SubResource( 23 )
anims/cookold = SubResource( 2 )
anims/none = SubResource( 35 )
anims/still = SubResource( 3 )

[node name="PCInteractionArea" type="Area" parent="." groups=["interact"]]
collision_layer = 1024
collision_mask = 1024
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="PCInteractionArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Indicator" parent="." instance=ExtResource( 4 )]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
cast_shadow = 2
shaded = true
alpha_cut = 2
frames = SubResource( 21 )
animation = "cook"
frame = 5
playing = true

[connection signal="area_entered" from="PCInteractionArea" to="." method="_on_PCInteractionArea_area_entered"]
[connection signal="area_exited" from="PCInteractionArea" to="." method="_on_PCInteractionArea_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite3D" to="." method="_on_AnimatedSprite3D_animation_finished"]
